crates/service/tests/completion/snapshots/features__completion__data__data_idx.snap
---
source: crates/service/tests/completion/data.rs
expression: response
---
[
  {
    "label": "$d",
    "labelDetails": {
      "detail": "(data $d)"
    },
    "kind": 6
  },
  {
    "label": "1",
    "labelDetails": {
      "detail": "(data)"
    },
    "kind": 6
  }
]
