crates/service/tests/completion/snapshots/features__completion__data__data_idx_following_ident.snap
---
source: crates/service/tests/completion/data.rs
expression: response
---
[
  {
    "label": "$d",
    "labelDetails": {
      "detail": "(data $d)"
    },
    "kind": 6,
    "textEdit": {
      "range": {
        "start": {
          "line": 5,
          "character": 15
        },
        "end": {
          "line": 5,
          "character": 17
        }
      },
      "newText": "$d"
    }
  },
  {
    "label": "1",
    "labelDetails": {
      "detail": "(data)"
    },
    "kind": 6,
    "textEdit": {
      "range": {
        "start": {
          "line": 5,
          "character": 15
        },
        "end": {
          "line": 5,
          "character": 17
        }
      },
      "newText": "1"
    }
  }
]
