crates/service/tests/completion/snapshots/features__completion__data__deprecated.snap
---
source: crates/service/tests/completion/data.rs
expression: response
---
[
  {
    "label": "$d",
    "labelDetails": {
      "detail": "(data $d)"
    },
    "kind": 6,
    "tags": [
      1
    ]
  }
]
