crates/service/tests/completion/snapshots/features__completion__data__memory_idx.snap
---
source: crates/service/tests/completion/data.rs
expression: response
---
[
  {
    "label": "$m",
    "kind": 6,
    "textEdit": {
      "range": {
        "start": {
          "line": 2,
          "character": 17
        },
        "end": {
          "line": 2,
          "character": 18
        }
      },
      "newText": "$m"
    }
  }
]
