crates/service/tests/completion/snapshots/features__completion__data__memory_init.snap
---
source: crates/service/tests/completion/data.rs
expression: response
---
[
  {
    "label": "$m",
    "kind": 6
  },
  {
    "label": "$d",
    "labelDetails": {
      "detail": "(data $d)"
    },
    "kind": 6
  }
]
