crates/service/tests/completion/snapshots/features__completion__data__memory_init_after_first_immediate.snap
---
source: crates/service/tests/completion/data.rs
expression: response
---
[
  {
    "label": "$d",
    "labelDetails": {
      "detail": "(data $d)"
    },
    "kind": 6
  }
]
